--- a/app-done/index.html
+++ b/app-done/index.html
@@ -1,156 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Bitmovin Cast Receiver Demo</title>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../images/bit-fav.png">
-    <!-- Bitmovin Player -->
-    <script src="//cdn.bitmovin.com/player/web/8/bitmovinplayer.js"></script>
+    <meta charset="utf-8">
+
     <style>
         body {
             margin: 0;
-            padding: 0;
-            font-family: 'Open Sans', sans-serif;
-            color: #fff;
-            font-weight: 300;
+            background-color: black;
+            font-size: 14pt;
         }
 
-        body {
-            background: rgba(44, 131, 185, 1);
-            background: -moz-linear-gradient(left, rgba(44, 131, 185, 1) 0%, rgba(30, 171, 227, 1) 100%);
-            background: -webkit-gradient(left top, right top, color-stop(0%, rgba(44, 131, 185, 1)), color-stop(100%, rgba(30, 171, 227, 1)));
-            background: -webkit-linear-gradient(left, rgba(44, 131, 185, 1) 0%, rgba(30, 171, 227, 1) 100%);
-            background: -o-linear-gradient(left, rgba(44, 131, 185, 1) 0%, rgba(30, 171, 227, 1) 100%);
-            background: -ms-linear-gradient(left, rgba(44, 131, 185, 1) 0%, rgba(30, 171, 227, 1) 100%);
-            background: linear-gradient(to right, rgba(44, 131, 185, 1) 0%, rgba(30, 171, 227, 1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2c83b9', endColorstr='#1eabe3', GradientType=1);
+        #player-wrapper {
+            height: 100%;
+            width: 100%;
+            position: fixed;
         }
 
-        #wrapper {
-            background: url(../images/logo-bg-demopage.png);
-            height: 100vh;
+        #app-status-overlay {
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            display: table;
         }
 
-        #banner {
-            border-bottom: 1px solid #fff;
-            background-color: #1eabe3;
-            width: 100%
-        }
-
-        #banner h1 {
-            margin: 0;
-            padding: 30px;
-        }
-
-        .logo {
-            padding: 10px;
-            width: 25%;
-            min-width: 350px;
-            float: left;
-            margin: auto;
-        }
-
-        .title {
-            width: 75%;
-            white-space: nowrap;
-        }
-
-        .clear {
-            clear: both;
-        }
-
-        .content {
-            margin-bottom: 10em;
-        }
-
-        h1, h2, h3, p {
-            font-weight: 300;
+        #app-status-overlay-loading {
+            display: table-cell;
             text-align: center;
-            margin: 40px;
+            vertical-align: middle;
         }
 
-        #player {
-            max-width: 900px;
-            width: 90%;
-            margin: auto;
-            -webkit-box-shadow: 0px 0px 56px 0px rgba(0, 0, 0, 0.75);
-            -moz-box-shadow: 0px 0px 56px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 56px 0px rgba(0, 0, 0, 0.75);
-        }
-
-        a {
-            color: #97d9ef;
-            font-weight: 400;
-            text-decoration: none;
-        }
-
-        a:hover {
-            color: #fff;
-        }
-
-        @media (max-width: 800px) {
-            .logo {
-                width: 100%;
+        @keyframes app-status-overlay-loading-dot {
+            0% {
+                opacity: 1;
             }
 
-            .title {
-                display: none;
+            25% {
+                opacity: 0;
             }
+
+            50% {
+                opacity: 0;
+            }
+
+            75% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        .app-status-overlay-loading-dot {
+            display: inline-block;
+            width: 2em;
+            height: 2em;
+            border-radius: 50%;
+            background-color: #777;
+            margin: 0.3em;
+            animation: app-status-overlay-loading-dot 4s ease-in infinite;
+        }
+
+        .app-status-overlay-loading-dot:nth-child(1) {
+            animation-delay: .25s;
+        }
+
+        .app-status-overlay-loading-dot:nth-child(2) {
+            animation-delay: .5s;
+        }
+
+        .app-status-overlay-loading-dot:nth-child(3) {
+            animation-delay: .75s;
         }
     </style>
 </head>
+
 <body>
-<div id="wrapper">
-    <div id="banner">
-        <div class="logo"><img src="../images/bitmovin-logo.png"></div>
-        <div class="title"><h1>Bitmovin Cast Receiver Demo</h1></div>
-        <div class="clear"></div>
-    </div>
-    <div class="container">
-        <h1>HTML5 Adaptive Streaming Player for MPEG-DASH & HLS</h1>
-        <h2>Your videos play everywhere with low startup delay, no buffering and in highest quality.</h2>
-        <div class="content">
-            <div class="player-wrapper">
-                <div id="player"></div>
-            </div>
-            <div class="description">
-                <p>For more information about the bitmovin player, please have a look at our online <a
-                        href="//bitmovin.com/support" target="_blank">Developer Section</a>.</p>
-            </div>
+    <div id="player-wrapper"></div>
+    <div id="app-status-overlay">
+        <div id="app-status-overlay-loading">
+            <div class="app-status-overlay-loading-dot"></div>
+            <div class="app-status-overlay-loading-dot"></div>
+            <div class="app-status-overlay-loading-dot"></div>
         </div>
     </div>
-</div>
-<script type="text/javascript">
 
-  var player;
+    <link rel="stylesheet" href="https://cdn.bitmovin.com/player/web/8/bitmovinplayer-ui.css">
+    <script type="text/javascript" src="https://cdn.bitmovin.com/player/web/8/bitmovinplayer-ui.js"></script>
+    <script type="text/javascript" src="https://cdn.bitmovin.com/player/web/8/bitmovinplayer.js"></script>
+    <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.js"
+        integrity="sha256-uvyqD81XGEqlTzEGkl+5L73IUlWTXtdLhfnUG5n3FbE=" crossorigin="anonymous"></script>
+    <script type="text/javascript"
+        src="https://cdn.bitmovin.com/player/cast/8.14.1-2/bitmovinplayer-remotereceiver.js"></script>
+    <script type="text/javascript">
 
-  var conf = {
-    key: 'YOUR-KEY-HERE',
-    cast: {
-      enable: true
-    },
-    remotecontrol: {
-      receiverApplicationId: 'D3A86B20', // Replace with your application id
-      type: 'googlecast',
-    }
-  };
-  var source = {
-    dash: 'https://bitdash-a.akamaihd.net/content/MI201109210084_1/mpds/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.mpd',
-    hls: 'https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8',
-    progressive: 'https://bitdash-a.akamaihd.net/content/MI201109210084_1/MI201109210084_mpeg-4_hd_high_1080p25_10mbits.mp4',
-    poster: 'https://bitdash-a.akamaihd.net/content/MI201109210084_1/poster.jpg'
-  };
+        // Hide app loading overlay
+        const hideStatusOverlay = () => {
+            document.getElementById('app-status-overlay').style.display = 'none';
+        };
 
-  player = new bitmovin.player.Player(document.getElementById('player'), conf);
+        window.onload = () => {
 
-  player.load(source).then(function () {
-    console.log('Successfully loaded source'); // Success!
-  }, function () {
-    console.log('Error while loading source'); // Error!
-  });
-</script>
+            // Bitmovin Player configuration properties
+            const conf = {
+                key: 'e84fe91a-d890-4246-9f00-9896922484ee',
+                tweaks: {
+                    max_buffer_level: 20,
+                },
+                events: {},
+                ui: false,
+            };
+
+            // Instantiate a Bitmovin player
+            const player = new bitmovin.player.Player(document.getElementById('player-wrapper'), conf);
+
+            // Hide loading overlay when a source is loaded
+            player.on(bitmovin.player.PlayerEvent.SourceLoaded, hideStatusOverlay);
+
+            // Hide overlay when an error happens (avoids hidden errors during startup)
+            player.on(bitmovin.player.PlayerEvent.Error, hideStatusOverlay);
+
+            require(['remotecontrol/GoogleCastRemoteControlReceiver'], (gcr) => {
+                const googleCastRemoteControlReceiver = new gcr.GoogleCastRemoteControlReceiver(player);
+
+                // Handler that takes properties from the remotecontrol.customReceiverConfig configuration for use within the receiver
+                googleCastRemoteControlReceiver.setCastMetadataListener((metadata) => {
+                    switch (metadata.type) {
+                        case 'customReceiverConfig':
+                            const customReceiverConfig = metadata.data;
+                            if (customReceiverConfig.receiverStylesheetUrl != null) {
+                                const head = document.getElementsByTagName('head')[0];
+                                const link = document.createElement('link');
+                                link.rel = 'stylesheet';
+                                link.type = 'text/css';
+                                link.href = customReceiverConfig.receiverStylesheetUrl;
+                                head.appendChild(link);
+                            }
+                            break;
+                    }
+                })
+            });
+
+            // Load the built-in Bitmovin Cast Receiver UI
+            const uimanager = bitmovin.playerui.UIFactory.buildDefaultCastReceiverUI(player);
+        }
+    </script>
 </body>
+
 </html>
