--- a/app-done/index.html
+++ b/app-done/index.html
@@ -9,6 +9,15 @@
   <script src="//www.gstatic.com/cast/sdk/libs/devtools/debug_layer/caf_receiver_logger.js"></script>
 </head>
 
+<!-- <style>
+  cast-media-player {
+    --theme-hue: 100;
+    --progress-color: rgb(0, 255, 0);
+    --splash-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREtKlPneLDVVN6lqHbzCQ5ubLg5PfHRPPpGQ&usqp=CAU');
+    --splash-size: cover;
+  }
+</style> -->
+
 <body>
   <cast-media-player></cast-media-player>
   <footer>
