update code and splash image

--- a/app-done/index.html
+++ b/app-done/index.html
@@ -14,7 +14,8 @@
     /* --theme-hue: 100; */
     /* --progress-color: rgb(0, 255, 0); */
     /* --splash-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREtKlPneLDVVN6lqHbzCQ5ubLg5PfHRPPpGQ&usqp=CAU'); */
-    --playback-logo-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREtKlPneLDVVN6lqHbzCQ5ubLg5PfHRPPpGQ&usqp=CAU');
+    --splash-image: url('./images/logo-lg.png');
+    /* --playback-logo-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREtKlPneLDVVN6lqHbzCQ5ubLg5PfHRPPpGQ&usqp=CAU'); */
     /* --splash-size: cover; */
   }
 </style>
